--- a/2/notdumb/index.html
+++ b/2/notdumb/index.html
@@ -10,7 +10,7 @@
 <body onload="playclaps()">
   <script src="script.js"></script>
   <audio id="claps" src="https://www.myinstants.com/media/sounds/applause-4.mp3"></audio>
-  <a href="https://iqtest.gq/3" id="next">Next &raquo;</a>
+  <a href="3" id="next">Next &raquo;</a>
   <p id="madeit">You didn't crack ur head! Good job! It'll be harder next time. </p>
   <img id="background-image" src="https://rb.gy/li9u6k">
 </body>
